# prediction

./: Cargo.toml  README.md
src/: client.rs  engine.rs  lib.rs  template.rs
src/clients/: huggingface.rs
src/templates/: mod.rs  qa_html.rs
