[package]
name = "prediction"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
reqwest = { version = "0.11.11", features = ["json"] }
thiserror = "1.0.32"
futures-util = "0.3.23"
serde = { version = "1.0.143", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros"] }